--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,7 @@ extra:
   book:
     title: Spark Connect
     spark_core: https://books.japila.pl/apache-spark-internals
+    spark_sql: https://books.japila.pl/spark-sql-internals
   grpc:
     version: 1.56.0
     docs: https://grpc.io/docs/languages/java/
@@ -120,18 +121,6 @@ nav:
   - index.md
   - Internals:
     - overview.md
-    - CommandPlugin.md
-    - ExecuteHolder.md
-    - ExecuteThreadRunner.md
-    - ExpressionPlugin.md
-    - RelationPlugin.md
-    - SimpleSparkConnectService.md
-    - SparkConnectAnalyzeHandler.md
-    - SparkConnectExecutionManager.md
-    - SparkConnectInterceptorRegistry.md
-    - SparkConnectPlanner.md
-    - SparkConnectPlugin.md
-    - SparkConnectServer.md
-    - SparkConnectService.md
-    - SparkConnectStreamHandler.md
     - logging.md
+  - ... | server/**.md
+  - ... | client/**.md
