Spark Connect in Spark SQL

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,7 +124,6 @@ nav:
   - Internals:
     - overview.md
     - logging.md
-    - SparkSession.md
-    - SQLExecution.md
   - ... | server/**.md
   - ... | client/**.md
+  - ... | sql/**.md
