--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,5 +131,6 @@ nav:
     - spark-connect-shell.md
   - ... | server/**.md
   - ... | client/**.md
+  - ... | pyspark/**.md
   - ... | sql/**.md
   - ... | jvm/**.md
