--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,8 @@ extra_css:
 
 nav:
   - index.md
+  - Features:
+    - reattachable-plan-execution.md
   - Internals:
     - overview.md
     - logging.md
