--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,6 +110,8 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/jaceklaskowski
+    - icon: fontawesome/brands/bluesky
+      link: https://bsky.app/profile/books.japila.pl
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/jaceklaskowski
     - icon: fontawesome/brands/linkedin
@@ -119,13 +121,18 @@ extra:
     - icon: fontawesome/brands/mastodon
       link: https://fosstodon.org/@jaceklaskowski
   spark:
-    version: 4.0.0-rc1
-    github: https://github.com/apache/spark/blob/v4.0.0-rc1
+    version: 4.0.1
+    github: https://github.com/apache/spark/blob/v4.0.1
     jira: https://issues.apache.org/jira/browse
+  tags:
+    DeveloperApi: developerapi
 
 extra_css:
   - css/code.css
 
+# Sections with ... under awesome-pages plugin's control
+# https://github.com/lukasgeiter/mkdocs-awesome-pages-plugin
+# Review corresponding .pages for setup
 nav:
   - index.md
   - Features:
